--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Terrario</title>
     <link rel="stylesheet" href="./src/css/styles.css" >
-    <script src="./src/js/script.js"></script>
+    <script src="./src/js/script.js" defer></script>
   </head>
   <body>
     <div id="page">
@@ -59,7 +59,7 @@
           <img src="src/img/plant14.png" alt="plant" class="plant" id="plant14" >
         </div>
       </div>
-      <div id="terrario">
+      <div id="terrarium">
         <div class="jar-top"></div>
         <div class="jar-walls">
             <div class="jar-glossy-long"></div>
